k8s/sfa-app/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfa-ingress
  namespace: sfa
spec:
  ingressClassName: traefik
  rules:
    - host: sfa.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sfa-app
                port:
                  number: 80
